force-app/main/default/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <description>This object tracks all the records for donations made by a grantmaker</description>
    <label>Donation</label>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>