force-app/main/default/objects/Donation__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caterpillar</fullName>
                <default>true</default>
                <label>Caterpillar</label>
            </value>
            <value>
                <fullName>Yourcause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>