force-app/main/default/objects/Donation__c/fields/Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Status__c</fullName>
    <label>Deposit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposited</fullName>
                <default>true</default>
                <label>Deposited</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>