force-app/main/default/objects/Donation__c/fields/Donation_Month__c.field-meta.xml
<CustomField>
    <fullName>Donation_Month__c</fullName>
    <formula>MONTH( Payment_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>