force-app/main/default/objects/Donation__c/fields/Matching_Cash__c.field-meta.xml
<CustomField>
    <fullName>Matching_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Turn on if this cash amount was for matching purpose.</inlineHelpText>
    <label>Matching Cash</label>
    <type>Checkbox</type>
</CustomField>