force-app/main/default/objects/Donation__c/fields/Matching_Company__c.field-meta.xml
<CustomField>
    <fullName>Matching_Company__c</fullName>
    <inlineHelpText>Type the company that is matching.</inlineHelpText>
    <label>Matching Company</label>
    <length>15</length>
    <type>Text</type>
</CustomField>