force-app/main/default/objects/Donation__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <description>Links to the Member object</description>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>