force-app/main/default/objects/Donation__c/fields/Original_Payment__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment__c</fullName>
    <label>Original Payment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zelle</fullName>
                <default>true</default>
                <label>Zelle</label>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Paid to Matching Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>