force-app/main/default/objects/Donation__c/fields/Payment_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Payment date</label>
    <type>Date</type>
</CustomField>