force-app/main/default/objects/Donation__c/fields/processed__c.field-meta.xml
<CustomField>
    <fullName>processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>processed</label>
    <type>Checkbox</type>
</CustomField>