force-app/main/default/objects/Donation__c/fields/Soft_Credit_Member__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicate the person who made the donation.</inlineHelpText>
    <label>Soft Credit Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Donations (Soft Credit Member)</relationshipLabel>
    <relationshipName>Donations1</relationshipName>
    <type>Lookup</type>
</CustomField>