force-app/main/default/objects/Donation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field has only one purpose. It&apos;s status will change when the pledge becomes inactive. We use this field to sort donations needed for roll up summary field in member object</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>