force-app/main/default/objects/Donation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Member__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payments</label>
</ListView>