force-app/main/default/objects/Donation__c/listViews/Credit_Card_Payments.listView-meta.xml
<ListView>
    <fullName>Credit_Card_Payments</fullName>
    <columns>Member__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Method__c</field>
        <operation>equals</operation>
        <value>Credit Card</value>
    </filters>
    <label>Credit Card Payments</label>
</ListView>