force-app/main/default/objects/Donation__c/listViews/Current_Month_Payments.listView-meta.xml
<ListView>
    <fullName>Current_Month_Payments</fullName>
    <columns>Member__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Payment_date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 Day Payments</label>
</ListView>