force-app/main/default/objects/Donation__c/listViews/Matching_Donations.listView-meta.xml
<ListView>
    <fullName>Matching_Donations</fullName>
    <columns>Member__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Method__c</field>
        <operation>equals</operation>
        <value>Matching</value>
    </filters>
    <label>Matching Donations</label>
</ListView>